--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,230 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
+
+* {
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+    --font-roboto: "Roboto Slab", serif;
+    --font-raleway: "Raleway", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    font-family: var(--font-roboto);
+    background-image: radial-gradient(circle, #731717, #691516, #5f1315, #561213, #4c1011, #450f10, #3f0e0f, #380d0d, #330c0c, #2d0b0b, #280a09, #240707);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+    padding: 4rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+h1 {
+    font-size: 4rem;
+    letter-spacing: 0.9px;
+    background: radial-gradient(circle, #fcdeb9bb, #fcdeb9ab, #fcdeb9a5, #fbdaabc1, #fbdaabc2, #f7d1a0c4, #f4cb96cb, #f0c48bc1, #eaba82a5, #e4b07998, #dda57186, #d79a6960);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    width: fit-content;
+}
+
+.search {
+    width: 71%;
+    margin: 4rem 0 2rem;
+
+    display: flex;
+    align-items: center;
+    -content: center;
+    color: #fbdaabe3;
+
+    padding: 1.2rem;
+    border-radius: 3rem;
+    background:  radial-gradient(circle, #380d0d, #330c0c, #2d0b0b, #280a09, #240707);
+    /* -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527; */
+    box-shadow: 2px 2px 80px 1px #701616,
+    -3px -3px 80px 1px #761818;
+}
+
+.search input {
+    flex: 1;
+    border: none;
+    font-size: 1.2rem;
+    font-family: var(--font-raleway);
+    font-weight: 500;
+    padding: 0.2rem;
+
+    outline: none;
+    color: #f0cc9ae3;
+    background: radial-gradient(circle, #380d0dc9, #330c0cc8, #2d0b0bcb, #280a09c4, #240707cc);
+    border-radius: 18px;
+}
+
+
+.search img {
+    width: 44px;
+    height: 44px;
+    cursor: pointer;
+    filter: invert(90%) sepia(3%) saturate(5000%) hue-rotate(200deg) brightness(120%) contrast(80%);
+}
+
+.empty {
+  width: 100%;
+  margin-top: 3rem;
+
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.empty h2 {
+  font-size: 1.25rem;
+  color: #f9d3b4;
+  font-family: var(--font-raleway);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.container {
+  width: 100%;
+  margin-top: 3rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.movie {
+  width: 310px;
+  height: 460px;
+  margin: 1.5rem;
+
+  position: relative;
+  border-radius: 18px;
+  overflow: hidden;
+  border: none;
+
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
+  box-shadow: 12px 12px 12px -8px rgba(0, 0, 0, 0.1);
+}
+
+.movie div:nth-of-type(1) {
+  justify-content: center;
+  font-size: 3rem;
+  position: absolute;
+  padding: 50% 29% 30%;
+  width: 100%;
+  opacity: 0;
+  top: 0;
+  color: #f0f0f0;
+}
+
+.movie:hover {
+  box-shadow:  6px 6px 51px #701616,
+  -6px -6px 51px #761818;
+  transform: scale(1.1, 1.1);
+  opacity: 0.85;
+}
+
+.movie div:nth-of-type(2) {
+  width: 100%;
+  height: 100%;
+}
+
+.movie div:nth-of-type(2) img {
+  height: 100%;
+  width: 100%;
+}
+
+.movie div:nth-of-type(3) {
+  z-index: 2;
+  background: linear-gradient(145deg, #681515,#561213);
+  /* background-color: #561213; */
+  padding: 8px 24px 24px 24px;
+  min-height: 140px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.movie div:nth-of-type(3) span {
+  font-family: "Raleway", sans-serif;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  color: #f0f0f0;
+}
+
+.movie div:nth-of-type(3) h3 {
+  margin-top: 4px;
+  font-family: "Roboto Slab", serif;
+  color: #f9d3b4;
+}
+
+.movie:hover div:nth-of-type(2) {
+  height: 100%;
+  opacity: 1;
+  text-shadow: #240707;
+}
+
+.movie:hover div:nth-of-type(3) {
+    display: none;
+  /* background: transparent; */
+}
+
+.movie:hover div:nth-of-type(1) { /*year*/
+  opacity: 1;
+}
+
+@media screen and (max-width: 600px) {
+  .app {
+    padding: 4rem 2rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  .search {
+    padding: 1rem 1.75rem;
+    width: 100%;
+  }
+
+  .search input {
+    font-size: 1rem;
+    padding-right: 0.25rem;
+
+  }
+
+  .search img {
+    width: 32px;
+    height: 32px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .app {
+    padding: 2.8rem 0.8rem;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 2rem;
+  }
+
+  .container {
+    margin-top: 2rem;
+  }
+  .search input {
+    padding-right: 4px;
+
+  }
+  .movie {
+    width: "100%";
+    margin: 0.8rem;
   }
 }
